--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>odin recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>“Odin Recipes”</h1>
-    <ul>
-        <li><a href="recipes/biriyani.html">Biriyani</a></li>
-        <li><a href="recipes2/pizza.html">Pizza</a></li>
-        <li><a href="recipes3/burger.html">Burger</a></li>
-    </ul>
+    <div id="wrapper">
+        <h1>“Odin Recipes”</h1>
+        <ul>
+            <li><a href="recipes/biriyani.html">Biriyani</a></li>
+            <li><a href="recipes2/pizza.html">Pizza</a></li>
+            <li><a href="recipes3/burger.html">Burger</a></li>
+        </ul>
+    </div>
+    
 </body>
 </html>
