giving links to pictures

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     
             <div class="list">
                 <ul>
-                    <li><a href="recipes/biriyani.html">Biriyani</a></li>
-                    <li><a href="recipes2/pizza.html">Pizza</a></li>
-                    <li><a href="recipes3/burger.html">Burger</a></li>
+                    <li><a href="recipes/biriyani.html"><img src="recipes/images.jpg" alt="Biriyani" style="width:450px;height:250px";></a></li>
+                    <li><a href="recipes2/pizza.html"><img src="recipes2/pizza.jpg" alt="Pizza" style="width:450px;height:250px";></a></li>
+                    <li><a href="recipes3/burger.html"><img src="recipes3/burger.jpg" alt="burger" style="width:450px;height:250px"></a></li>
                 </ul>
             </div>
     
