Change the images and give credit to owner on Github readme.

--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biriyani</title>
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        
+    </style>
 </head>
 <body>
-    <h1>Biryani</h1>
+    <h1 class="header">Biryani</h1>
 
-    <img src="images.jpg" alt="Biriyani" style="width:450px;height:250px";>
-    <p>Biryani is kind of recipe mostly found in South Asia. It is made of Rice, Chicken and Potatoes.</p>
+    <img src="biriyani.jpg" alt="Biriyani" style="width:450px;height:250px";>
+    <p class="list">Biryani is kind of recipe mostly found in South Asia. It is made of Rice, Chicken and Potatoes.</p>
     <p>Biryani is a spiced mix of meat and rice, traditionally cooked over an open fire in a leather pot. 
         It is combined in different ways with a variety of components to create a number of highly tasty and unique 
         flavor combinations.</p>
 
 
-        <h3>Ingredients</h3>
+        <h3 class="heading">Ingredients</h3>
+        
     <ul>
         <li>Rice</li>
         <li>Chicken</li>
