--- a/recipes3/burger.html
+++ b/recipes3/burger.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Burger</h1>
-    <img src="burger.jpg" alt="burger" style="width:450px;height:250px">
+    <img src="burger2.jpg" alt="burger" style="width:450px;height:250px">
     <p>Burgers are a classic cookout food, but classic doesn't have to mean boring. While there's nothing wrong with good 
         old-fashioned lettuce, tomato, and onion, the best burger toppings will take your patties to the next level, 
         whether you're making classic cheeseburgers, salmon burgers, turkey burgers, bison burgers, or sliders.</p>
