--- a/recipes2/pizza.html
+++ b/recipes2/pizza.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pizza</h1>
 
-    <img src="pizza.jpg" alt="Pizza" style="width:450px;height:250px";>
+    <img src="pizza2.jpg" alt="Pizza" style="width:450px;height:250px";>
     <p>Pizza is a dish of Italian origin consisting of a usually round, flat base of leavened wheat-based dough 
         topped with tomatoes, cheese, and often various other ingredients, which is then baked at a high temperature, 
         traditionally in a wood-fired oven. A small pizza is sometimes called a pizzetta.</p>
