do some more styling and manageing images sizes

--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
     <div class="header">
         <h1>The Recipe Website</h1>
     </div>
-    <div class="list">
         <div class="heading">
             <h3>Find your favorite recipe here.</h3>
             <ul>
-                <li><a href="recipes/biriyani.html">Biryani</a></li>
-                <li><a href="recipes2/pizza.html">Pizza</a></li>
-                <li><a href="recipes3/burger.html">Burger</a></li>
+                <div class="row">
+                    <div class="column">
+                        <li><a href="recipes/biriyani.html">Biryani<img src="recipes/biriyani.jpg"  style="width: 100%";></a></li>
+                    </div>
+                    <div class="column">
+                        <li><a href="recipes2/pizza.html">Pizza<img src="recipes2/pizza2.jpg" style="width: 100%";></a></li>
+                    </div>
+                    <div class="column">
+                        <li><a href="recipes3/burger.html">Burger<img src="recipes3/burger2.jpg" style="width: 100%"></a></li>
+                    </div>
+                </div>                 
             </ul>
         </div>
     </div>
     
 </body>
 </html>
-<!-- <img src="recipes/images.jpg" alt="Biriyani" style="width:450px;height:250px";>
-<img src="recipes2/pizza.jpg" alt="Pizza" style="width:450px;height:250px";>
-<img src="recipes3/burger.jpg" alt="burger" style="width:450px;height:250px"> -->
